# ble-thermo-hygrometer

./: CMakeLists.txt  HISTORY  README.md  README.ru.md  ble-helper-win.cpp  ble-helper-win.h  ble-helper.cpp  ble-helper.h  ble-string-helper-win.cpp  ble-string-helper-win.h  ble-string-helper.h  ble-thermo-hygrometer.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  test-discover.cpp  test-read.cpp
